resolution and layout bug fixed

--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,11 @@
     height: 200px;
 }
 
+@media only screen and (max-width: 870px){
+    #left-searchbox h2, #right-searchbox h2{
+        font-size: 25px;
+    }
+}
 @media only screen and (max-width: 700px){
     #div-searchbox{
         width: 450px;
